--- a/popup.html
+++ b/popup.html
@@ -10,14 +10,12 @@
   </head>
   <body>
     <div class="container">
+      <img class="icon" src="img/icon.png" alt="icon" />
       <h4>Budget Manager</h4>
-
-      <p>Total <span id="total"></span></p>
-      <param>Limit <span id="limit"></span></param>
-
-      <label>Add Amount</label>
+      <p>Total <span id="total" class="badge badge-info"></span></p>
+      <label>Limit</label>
       <input type="text" id="amount" />
-      <button class="btn btn-primary" id="changeColor">Click me</button>
+      <button class="btn btn-primary" id="addExpense">Add</button>
       <script src="js/jquery.min.js"></script>
       <script src="js/main.js"></script>
     </div>
