--- a/options.html
+++ b/options.html
@@ -17,16 +17,17 @@
 
       <form>
         <div class="form-group">
-          <label for="limit">Update Limit</label>
+          <label for="limit">Limit New Amount </label>
           <input type="text" class="form-control" id="limitValue" />
         </div>
         <button type="submit" class="btn btn-primary" id="saveLimit">
           Submit
         </button>
-        <button class="btn btn-danger" id="resetExpense">Reset xpense</button>
+        <button class="btn btn-danger" id="resetExpense">Reset Spending</button>
       </form>
 
       <script src="js/jquery.min.js"></script>
+      <script src="js/shared.js"></script>
       <script src="js/options.js"></script>
     </div>
   </body>
