--- a/popup.html
+++ b/popup.html
@@ -13,6 +13,7 @@
       <img class="icon" src="img/icon.png" alt="icon" />
       <h4>Budget Manager</h4>
       <p>Spending <span id="spending" class="badge badge-info"></span></p>
+      <p>Limit <span id="limit" class="badge badge-info"></span></p>
 
       <form>
         <div class="form-group">
@@ -20,11 +21,12 @@
           <input type="text" class="form-control" id="spendingAmount" />
         </div>
         <button type="submit" class="btn btn-primary" id="updateSpending">
-          Submit
+          Spend
         </button>
       </form>
       <hr />
       <script src="js/jquery.min.js"></script>
+      <script src="js/shared.js"></script>
       <script src="js/popup.js"></script>
     </div>
   </body>
