--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="container">
-      <img class="icon" src="img/icon.png" alt="icon" />
+      <img class="icon" src="icon.png" alt="icon" />
       <h4>Budget Manager</h4>
       <p>Spending <span id="spending" class="badge badge-info"></span></p>
       <p>Limit <span id="limit" class="badge badge-info"></span></p>
