--- a/options.html
+++ b/options.html
@@ -5,7 +5,7 @@
       rel="stylesheet"
       href="node_modules/bootstrap/dist/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="styles/main.css.css" />
+    <link rel="stylesheet" href="styles/main.css" />
     <link rel="stylesheet" href="styles/options.css" />
     <title>Moataz Extention</title>
   </head>
