refactoring add Ideas section

--- a/options.html
+++ b/options.html
@@ -11,13 +11,14 @@
   </head>
   <body>
     <div class="container">
-      <h2>Budget Manager Options</h2>
+      <h2>Budget Manager Configuration</h2>
       <p>Spending <span id="spending" class="badge badge-info"></span></p>
       <p>Limit <span id="limit" class="badge badge-info"></span></p>
 
+      <h3>Update Limit Amount</h3>
       <form>
         <div class="form-group">
-          <label for="limit">Limit New Amount </label>
+          <label for="limitValue">Limit</label>
           <input type="text" class="form-control" id="limitValue" />
         </div>
         <button type="submit" class="btn btn-primary" id="saveLimit">
